Banner without form

--- a/index.html
+++ b/index.html
@@ -7,52 +7,81 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <nav class=" w-full h-[100px]">
+    <nav class="w-full h-[100px]">
       <div class="container flex max-w-[1920px] h-[50px] pt-[25px] pb-[22px]">
         <div>
           <img src="./images/logo.svg" alt="" />
         </div>
-        <ul class="h-[50px] items-center flex gap-[46px] ml-[830px] mr-9 ">
-          <li class="text-4 font-medium leading-6 "><a href="#">Home</a></li>
+        <ul class="h-[50px] items-center flex gap-[46px] ml-[830px] mr-9">
+          <li class="text-4 font-medium leading-6"><a href="#">Home</a></li>
           <li class="text-4 font-medium leading-6"><a href="#">About Us</a></li>
-          <li class="text-4 font-medium leading-6"><a href="#">Contact Us</a></li>
+          <li class="text-4 font-medium leading-6">
+            <a href="#">Contact Us</a>
+          </li>
         </ul>
         <div class="w-[77px] h-10 py-3.5 px-2 rounded-lg font-bold">
           <span>EN</span>
         </div>
         <div class="w-[211px] h-[52px] flex gap-5">
-          <span class="w-[91px] py-3.5 px-6 border border-black rounded-[5px] font-bold"
+          <span
+            class="w-[91px] py-3.5 px-6 border border-black rounded-[5px] font-bold"
             ><a href="#"><button>Login</button></a></span
           >
-          <span class="w-[91px] py-3.5 px-6 text-white bg-black rounded-[5px] font-normal"
+          <span
+            class="w-[91px] py-3.5 px-6 text-white bg-black rounded-[5px] font-normal"
             ><a href="#"><button>signup</button></a></span
           >
         </div>
       </div>
     </nav>
 
+    <main>
+      <section id="Banner">
+        <div class="w-full h-[833px] bg-[url(/images/banner.png)] py-[207px] pl-[218px]">
+          <div class="w-[949px] h-[418px] ">
+            <div class="w-[510px] h-[278.58px]  ">
+              <div class="flex items-center gap-[9px] text-white mb-[7px]">
+                <span><img src="./images/banner_logo.svg" alt=""></span>
+                <span class="text-[15px] font-semibold leading-5 tracking-2 uppercase">Hair Salon, Masseuse, Beauty Salon</span>
+              </div>
+              <div class="w-[510px] h-40 text-[70px] text-[wheat] font-play font-bold leading-20 mb-6">
+                <span>
+                  Find a service close to you
+                </span>
+              </div>
+              <div class="w-[508px] h-[62px] text-[18px] text-white font-normal leading-7">
+                <p>There are many variation of passages are Ipsum available, majority have suffered alteration in some form.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
     <footer class="w-full text-white">
-      <div class=" h-[560px] bg-[#241520] py-[66px] px-[360px]">
+      <div class="h-[560px] bg-[#241520] py-[66px] px-[360px]">
         <div class="flex gap-[651px]">
           <div>
-            <img src="./images/service.svg" alt="">
+            <img src="./images/service.svg" alt="" />
           </div>
           <!-- <span></span> -->
-          
+
           <div class="flex gap-2.5">
-            <span><img src="./images/facebook.svg" alt=""></span>
-            <span><img src="./images/twitter.svg" alt=""></span>
-            <span><img src="./images/linkdn.svg" alt=""></span>
-            <span><img src="./images/instagram.svg" alt=""></span>
+            <span><img src="./images/facebook.svg" alt="" /></span>
+            <span><img src="./images/twitter.svg" alt="" /></span>
+            <span><img src="./images/linkdn.svg" alt="" /></span>
+            <span><img src="./images/instagram.svg" alt="" /></span>
           </div>
         </div>
         <div class="my-[52px]">
-            <img src="./images/Line.png" alt="">
+          <img src="./images/Line.png" alt="" />
         </div>
         <div class="flex gap-[129px]">
           <div class="w-[272px]">
-            <h3 class="text-[22px] font-play font-bold leading-5 mb-[21px]">Explore</h3>
-            <ul class="text-[17px] font-medium leading-9 ">
+            <h3 class="text-[22px] font-play font-bold leading-5 mb-[21px]">
+              Explore
+            </h3>
+            <ul class="text-[17px] font-medium leading-9">
               <li><a href="#">Home</a></li>
               <li><a href="#">About Us</a></li>
               <li><a href="#">Services</a></li>
@@ -61,18 +90,24 @@
             </ul>
           </div>
           <div class="w-[272px]">
-            <h3  class="text-[22px] font-play font-bold leading-5 mb-[21px]">Utility Pages</h3>
-            <ul class="text-[17px] font-medium leading-9 ">
+            <h3 class="text-[22px] font-play font-bold leading-5 mb-[21px]">
+              Utility Pages
+            </h3>
+            <ul class="text-[17px] font-medium leading-9">
               <li>Privacy Policy</li>
               <li>Terms of Use</li>
             </ul>
           </div>
-          <div class="w-[324] ">
-            <h3 class="text-[22px] font-play font-bold leading-5 mb-[21px]"> Keep in Touch</h3>
-            <div class="w-[324px] text-[17px] font-medium leading-8  ">
+          <div class="w-[324]">
+            <h3 class="text-[22px] font-play font-bold leading-5 mb-[21px]">
+              Keep in Touch
+            </h3>
+            <div class="w-[324px] text-[17px] font-medium leading-8">
               <div class="h-[63px] flex mb-[21px]">
                 <div class="w-[90px]">Address :</div>
-                <span class="w-[234px]">Mariendalsvej 50D 2 2000 Frederiksberg.</span>
+                <span class="w-[234px]"
+                  >Mariendalsvej 50D 2 2000 Frederiksberg.</span
+                >
               </div>
               <div class="flex mb-[21px]">
                 <div class="w-[90px]">Mail :</div>
@@ -82,12 +117,12 @@
                 <div class="w-[90px]">Phone :</div>
                 <span>+8801766550632</span>
               </div>
-            </div>           
+            </div>
           </div>
         </div>
       </div>
       <div class="w-full h-[75px] bg-[#160813] text-center items-center">
-        <p class="py-5"> © 2025, Team Clover | All rights reserved </p>
+        <p class="py-5">© 2025, Team Clover | All rights reserved</p>
       </div>
     </footer>
   </body>
