--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <nav class="w-full h-[100px]">
+    <nav class="w-[1920px] h-[100px]">
       <div class="container flex max-w-[1920px] h-[50px] pt-[25px] pb-[22px]">
         <div>
           <img src="./images/logo.svg" alt="" />
@@ -37,7 +37,7 @@
 
     <main>
       <section id="Banner">
-        <div class="w-full h-[833px] bg-[url(/images/banner.png)] py-[207px] pl-[218px]">
+        <div class="w-[1920px] h-[833px] bg-[url(/images/banner.png)] py-[207px] pl-[218px]">
           <div class="w-[949px] h-[418px] ">
             <div class="w-[510px] h-[278.58px]  ">
               <div class="flex items-center gap-[9px] text-white mb-[7px]">
@@ -56,9 +56,135 @@
           </div>
         </div>
       </section>
+
+      <section class="w-[1920px] h-[948px] py-16 px-[120px] bg-[#EBF3F5]" >
+        <div class="w-7xl h-[154px] ml-[200px] mb-[39px] px-64 items-center text-center ">
+          <h3 class="max-w-3xl h-[116px] text-[45px] font-bold font-play items-center text-center leading-[60px] text-[#422a3c]">We are Experienced in making you very Beautiful</h3>
+          <p class="w-[768px]-[30px] text-[20px] font-normal font-manrope items-center text-center  text-[#808080] mt-3">Lorem ipsum dolor sit amet consectetur. Eu quis enim tempor et proin neque.</p>
+        </div>
+        <div class="w-[1680px] h-[643px] flex ">
+          <div class="h-[611px] flex gap-6 rounded-[40px] overflow-hidden">
+              <div>
+            <img src="./images/pic1.png" alt="">
+          </div>
+          <div class="flex gap-6">
+            <div >
+              <div>
+                <img src="./images/pic2.png" alt="">
+              </div>          
+              <div class="mt-6">
+                <img src="./images/pic2.png" alt="">
+              </div>  
+            </div>
+              <div>
+                <div >
+                  <div>
+                    <img src="./images/pic3.png" alt="">
+                  </div>          
+                <div class="mt-6">
+                  <img src="./images/pic3.png" alt="">
+                </div>  
+              </div>
+            </div>
+          </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="w-[1920px] h-[944px] px-[111px] py-[84px]">
+        <div class="w-7xl h-[117px] relative mb-[100px]  py-8 mx-[236px] items-center text-center">
+          <h4 class="text-[15px] font-semibold font-manrope text-[#bc7b97] tracking-[3px]">OUR SERVICES</h4>
+          <h3 class="text-[45px] font-bold font-play leading-11 mb-4 text-[#422a3c]">Recommended</h3>
+          <p class="text-[20px] font-normal font-manrope leading-[30px]">Lorem ipsum dolor sit amet consectetur. Eu quis enim tempor et proin neque.</p>
+        </div>
+        <div class="flex  gap-6">
+
+          <div class="w-[384px] h-[536px] rounded-3xl overflow-hidden shadow-sm">
+            <div >
+              <img src="./images/card1.png" height="275px" width="384px" alt="">
+            </div>
+            <div class="p-6 ">
+              <div class="flex w-[336px] h-8 justify-between ">
+                <div class="flex gap-2 max-w-[55px] h-6 text-[#bc7b97] text-4 items-center"><img src="./images/start.svg" alt=""> 4.5</div>
+                <div><p class="text-[18px] font-bold font-play leading-8">104 reviews</p></div>
+              </div>
+              <div class="w-[336px] h-20 gap-2.5 my-6">
+                <h3 class="w-[336px] h-8 text-[24px] font-bold font-play mb-2.5">Salon Name</h3>
+                <span class="flex gap-2.5 w-[336px] h-[38px]"><img src="./images/locations.svg" height="18px" width="18px" alt=""> <p>Brookpark Ext, 27085, North Olmsted, 44070</p> </span>
+              </div>
+              <div>
+                <button class="w-[336px] h-[53px] px-8  text-4 font-play font-bold text-[#bc7b97] border border-[#bc7b97] rounded-lg">
+                  <a href="#">BOOK NOW</a>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="w-[384px] h-[536px] rounded-3xl overflow-hidden shadow-sm">
+            <div >
+              <img src="./images/card2.png" height="275px" width="384px" alt="">
+            </div>
+            <div class="p-6 ">
+              <div class="flex w-[336px] h-8 justify-between ">
+                <div class="flex gap-2 max-w-[55px] h-6 text-[#bc7b97] text-4 items-center"><img src="./images/start.svg" alt=""> 4.5</div>
+                <div><p class="text-[18px] font-bold font-play leading-8">104 reviews</p></div>
+              </div>
+              <div class="w-[336px] h-20 gap-2.5 my-6">
+                <h3 class="w-[336px] h-8 text-[24px] font-bold font-play mb-2.5">Salon Name</h3>
+                <span class="flex gap-2.5 w-[336px] h-[38px]"><img src="./images/locations.svg" height="18px" width="18px" alt=""> <p>Brookpark Ext, 27085, North Olmsted, 44070</p> </span>
+              </div>
+              <div>
+                <button class="w-[336px] h-[53px] px-8  text-4 font-play font-bold text-[#bc7b97] border border-[#bc7b97] rounded-lg">
+                  <a href="#">BOOK NOW</a>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="w-[384px] h-[536px] rounded-3xl overflow-hidden shadow-sm">
+            <div >
+              <img src="./images/card3.png" height="275px" width="384px" alt="">
+            </div>
+            <div class="p-6 ">
+              <div class="flex w-[336px] h-8 justify-between ">
+                <div class="flex gap-2 max-w-[55px] h-6 text-[#bc7b97] text-4 items-center"><img src="./images/start.svg" alt=""> 4.5</div>
+                <div><p class="text-[18px] font-bold font-play leading-8">104 reviews</p></div>
+              </div>
+              <div class="w-[336px] h-20 gap-2.5 my-6">
+                <h3 class="w-[336px] h-8 text-[24px] font-bold font-play mb-2.5">Salon Name</h3>
+                <span class="flex gap-2.5 w-[336px] h-[38px]"><img src="./images/locations.svg" height="18px" width="18px" alt=""> <p>Brookpark Ext, 27085, North Olmsted, 44070</p> </span>
+              </div>
+              <div>
+                <button class="w-[336px] h-[53px] px-8  text-4 font-play font-bold text-[#bc7b97] border border-[#bc7b97] rounded-lg">
+                  <a href="#">BOOK NOW</a>
+                </button>
+              </div>
+            </div>
+          </div>
+          <div class="w-[384px] h-[536px] rounded-3xl overflow-hidden shadow-sm">
+            <div >
+              <img src="./images/card4.png" height="275px" width="384px" alt="">
+            </div>
+            <div class="p-6 ">
+              <div class="flex w-[336px] h-8 justify-between ">
+                <div class="flex gap-2 max-w-[55px] h-6 text-[#bc7b97] text-4 items-center"><img src="./images/start.svg" alt=""> 4.5</div>
+                <div><p class="text-[18px] font-bold font-play leading-8">104 reviews</p></div>
+              </div>
+              <div class="w-[336px] h-20 gap-2.5 my-6">
+                <h3 class="w-[336px] h-8 text-[24px] font-bold font-play mb-2.5">Salon Name</h3>
+                <span class="flex gap-2.5 w-[336px] h-[38px]"><img src="./images/locations.svg" height="18px" width="18px" alt=""> <p>Brookpark Ext, 27085, North Olmsted, 44070</p> </span>
+              </div>
+              <div>
+                <button class="w-[336px] h-[53px] px-8  text-4 font-play font-bold text-[#bc7b97] border border-[#bc7b97] rounded-lg">
+                  <a href="#">BOOK NOW</a>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </section>
     </main>
 
-    <footer class="w-full text-white">
+    <footer class="w-[1920px] text-white">
       <div class="h-[560px] bg-[#241520] py-[66px] px-[360px]">
         <div class="flex gap-[651px]">
           <div>
