--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
             <!-- Content -->
             <div class="md:w-1/2 w-full">
-              <h2 class="text-[45px] md:text-3xl font-play font-bold text-[#141414]  leading-[1.3] tracking-[-0.01em mb-[15px]">
+              <h2 class="text-[45px] md:text-3xl font-play font-bold text-[#141414]  leading-[1.3] tracking-[-0.01em] mb-[15px]">
                 Subscribe to newsletter
               </h2>
 
