--- a/contactus.html
+++ b/contactus.html
@@ -25,6 +25,89 @@
       </div>
     </section>
 
+    <section class="h-[898px] pt-[169px] pb-[118px]  py-[360px]  bg-white">
+  <div class="w-[1200px] h-[611px] mx-auto px-6 ">
+    <div class="grid grid-cols-1 lg:grid-cols-2 gap-30 ">
+
+      <!-- Left Image -->
+      <div class="relative w-[545px] h-[611px] ">
+       
+
+        <img
+          src="./images/get.svg"
+          alt="Store interior"
+          class="w-full   rounded "
+          height="611px"
+          width="605px"
+        />
+      </div>
+
+      <!-- Right Content -->
+      <div class="py-6">
+        <p class="uppercase font-manrope font-semibold text-[15px]  leading-[1.3] tracking-[0.01em] text-[#422a3c] mb-2.5">
+          Get in touch!
+        </p>
+
+        <h2 class="text-[45px] font-play font-bold text-[#141414] mb-[23px] leading-[1.3] tracking-[-0.01em]">
+          We are here to help <br /> you always...
+        </h2>
+
+        <p class="leading-[1.7] text-[18px]   text-[#141414] mb-11 max-w-lg">
+          There are many variations of passages of Lorem Ipsum available,
+          but the majority have suffered alteration in some form, buying to
+          many desktop publishing packages.
+        </p>
+
+        <!-- Contact Info -->
+        <div class="space-y-[30px]">
+
+          <!-- Address -->
+          <div class="flex items-center gap-4 ">
+            <div class="w-[65px] h-[65px] ">
+              <img src="./images/get_home.svg" alt="">
+            </div>
+            <div class="">
+              <p class="font-bold font-play text-[#141414 ] leading-tight mb-2">Visit Us :</p>
+              <p class="font-semibold font-manrope text-[#141414 ] leading-tight tracking-[0.006rem]">
+                Mariendalsvej 50D 2 2000 Frederiksberg.
+              </p>
+            </div>
+          </div>
+
+          <!-- Email -->
+          <div class="flex items-center gap-4">
+            <div class="w-[65px] h-[65px] ">
+              <img src="./images/get_mail.svg" alt="">
+            </div>
+            <div>
+              <p class="font-bold font-play text-[#141414 ] leading-tight mb-2">Drop Us :</p>
+              <p class="font-semibold font-manrope text-[#141414 ] leading-tight tracking-[0.006rem]">
+                support@beautyness.com
+              </p>
+            </div>
+          </div>
+
+          <!-- Phone -->
+          <div class="flex items-center gap-4">
+            <div class="w-[65px] h-[65px] ">
+              <img src="./images/get_call.svg" alt="">
+            </div>
+            <div>
+              <p class="font-bold font-play text-[#141414 ] leading-tight mb-2">Call Us :</p>
+              <p class="font-semibold font-manrope text-[#141414 ] leading-tight tracking-[0.006rem]">
+                Call: 1-800-123-9999
+              </p>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
+
     <!-- Contact Section -->
     <section
       class="w-[1920px] h-[1183px] bg-[#fbf2e0] items-center py-[120px]"
